# pfas-catch

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  thermoanalysis.py
analysis/: thermodynamics.py
data/: pfas_deta_binding.csv
images/: DETA_benzene_gaff.mol2  DETA_cyclohexane_gaff.mol2  DETA_hexane_gaff.mol2  DETA_imidazole_gaff.mol2  DETA_isopentane_gaff.mol2  DETA_nitrobenzene_gaff.mol2  DETA_phenol_gaff.mol2  PFBA_gaff.mol2  PFBS_gaff.mol2  PFOA_gaff.mol2  PFOS_gaff.mol2
src/: audio_utils.py  constants.py  llm.py  models.py  utils.py
templates/: app.html
